<resources>
    <string name="app_name">Rare Finds</string>

    <!--Fragment name Strings-->
    <string name="collection_name">Collection</string>
    <string name="library_name">Library</string>
    <string name="open">open</string>
    <string name="close">close</string>

    <!--Header Strings-->
    <string name="header_image_des">This is the users avatar.</string>
    <string name="header_user">UserName</string>
    <string name="header_email">Email</string>

    <!--menu Strings-->
    <string name="my_collection">My Collection</string>
    <string name="search_frag">Search</string>
    <string name="profile_settings">Settings</string>
    <string name="profile_signout">Sign Out</string>
    <string name="item_name">Items</string>

    <!--Collection Strings-->
    <string name="add_category">Add_Category</string>
    <string name="input_category_name">Collection Name</string>
    <string name="category_name">Name</string>
    <string name="input_category_description">Collection Description</string>
    <string name="category_description">Description</string>
    <string name="add_category_name">Add</string>
    <string name="cancel_category_name">Cancel</string>
    <string name="image_category">Category Image</string>
    <string name="collection_btn_des">Button to add to collection</string>

    <!--Library View String-->
    <string name="release_date">Release Date</string>
    <string name="publisher">Publisher</string>
    <string name="description">Description</string>
    <string name="genre">Genre</string>
    <string name="comment">Comments</string>
    <string name="price">Price</string>
    <string name="year">Year</string>
    <string name="name">Name</string>

    <string-array name="genre">
        <item>Any</item>
        <item>Music</item>
        <item>Videos</item>
        <item>Video Games</item>
        <item>Computers</item>
        <item>Comics</item>
        <item>Novels</item>
    </string-array>

    <string-array name="lib_filter">
        <item>Any</item>
        <item>New</item>
        <item>Old</item>
        <item>A-Z</item>
        <item>FPS</item>
        <item>Platformer</item>
        <item>Third Person</item>
        <item>Shooter</item>
        <item>Puzzle</item>
        <item>Stealth</item>
        <item>Rough</item>
    </string-array>

    <string-array name="game_genre">
        <item>Any</item>
        <item>FPS</item>
        <item>Platformer</item>
        <item>Third Person</item>
        <item>Shooter</item>
        <item>Puzzle</item>
        <item>Stealth</item>
        <item>Rough</item>
    </string-array>

    <!--Login Strings-->
    <string name="user_name">Username</string>
    <string name="user_pass">Password</string>
    <string name="dont_have_account">Don\'t Have an Account?</string>
    <string name="btn_signup">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="img_description">User Avatar</string>
    <string name="sql_error_login">* Incorrect Username or Password.</string>
    <string name="user_img" />

    <!--Signup String-->
    <string name="signup_image" />
    <string name="create_user_name">Enter Username</string>
    <string name="create_password">Enter Password</string>
    <string name="create_email">Enter Email</string>
    <string name="create_image">Setup a user profile.</string>
    <string name="signup_btn_text">Sign UP</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="btn_description">Button to add image to profile</string>
    <string name="sql_error">* Sorry use a different email or username.</string>

    <!--Signup String-->
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="pass_error">* Sorry your passwords do not match.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Updating String-->
    <string name="update_Col">Edit Collection</string>
    <string name="update_Lib">Edit Library</string>
    <string name="update">update</string>
    <string name="delete">delete</string>
    <string name="add_comment">Add Comment</string>
    <string name="input_comment">Type your comment here....</string>
    <string name="add">add</string>

</resources>