<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Library">
            <menu>
                <item android:title="@string/search_frag"
                    android:icon="@drawable/ic_search_icon"/>

                <item
                    android:id="@+id/collectionFragment"
                    android:title="@string/my_collection"
                    android:icon="@drawable/ic_collection_icon"/>
            </menu>
        </item>

    </group>

    <group android:checkableBehavior="single">
        <item android:title="Profile">
            <menu>
                <item android:title="@string/profile_settings"
                    android:icon="@drawable/ic_setting_icon"/>

                <item
                    android:id="@+id/complete_signout"
                    android:title="@string/profile_signout"
                    android:icon="@drawable/ic_signout_icon"/>
            </menu>
        </item>
    </group>
</menu>