<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:background="@color/teal_200">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/header_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:padding="2dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/header_image_des"
        android:scaleType="fitXY"
        app:shapeAppearance="@style/Circular"
        app:strokeWidth="2dp"
        app:strokeColor="@color/dark_grey"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/header_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/header_user"
        android:paddingTop="8dp"
        android:textColorHint="#004D40" />

    <TextView
        android:id="@+id/header_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/header_email"
        android:textColorHint="#004D40" />
</LinearLayout>