<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">

    <ImageButton
        android:id="@+id/signup_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/create_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="ImageContrastCheck" />


    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/create_user_name"
        android:textColorHint="#757575"
        app:startIconDrawable="@drawable/ic_username_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_image" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUserName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/create_email"
        android:textColorHint="#757575"
        app:startIconDrawable="@drawable/ic_user_email_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUserName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUserMail2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/signUserPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:hint="@string/create_password"
        android:textColorHint="#757575"
        app:startIconDrawable="@drawable/ic_password_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUserMail" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/signUserPass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            tools:ignore="TextContrastCheck"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:text="@string/signup_btn_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/signUserPass"
        app:layout_constraintTop_toBottomOf="@+id/signUserPass" />

    <Button
        android:id="@+id/signUpCancelBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_btn_text"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/signUserPass"
        app:layout_constraintTop_toTopOf="@+id/signUpBtn" />
</androidx.constraintlayout.widget.ConstraintLayout>