<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/upDatingUser"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.practice.utils.shared.com.example.rare_finds.controllers.UpdatingUserFragment" >

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:scaleType="fitXY"
        android:contentDescription="@string/header_image_des" />

    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/change_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/change_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style ="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/confirm_change_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:inputType="textPassword"
        android:hint="@string/confirm_password"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_password" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/confirm_change_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="#757575"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/update_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_change_password" />

    <TextView
        android:id="@+id/sql_error_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/pass_error"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_change_password" />

</androidx.constraintlayout.widget.ConstraintLayout>